--- a/Base/templates/inicio/formularioClientes.html
+++ b/Base/templates/inicio/formularioClientes.html
@@ -1,24 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "baseweb.html" %}
+{% block h1_header %}
+Formulario de Clientes
+{% endblock h1_header %}
+{% block contenido %}
     {% if formulario.errors %}
 
     <p style="color: red;"> Los datos ingresados son incorrectos</p>
 
     {% endif %}
-    <form action=" " method = 'POST'> {% csrf_token %}
-    
-        <table>
-            {{ formulario.as_table }}
-        </table>
-    
+    <form action={%url 'formulario_clientes' %} method = 'POST'> 
+        {% csrf_token %}
+            {{formulario}}
         <input type='submit', value='Enviar'>
     
     </form>
-</body>
-</html>
+{% endblock contenido %}
