--- a/Base/templates/inicio/mostrar_listado.html
+++ b/Base/templates/inicio/mostrar_listado.html
@@ -1,15 +1,27 @@
-<!-- mostrar_listado.html -->
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Listado de Clientes</title>
-</head>
-<body>
+{% extends "baseweb.html" %}
+{% block h1_header %}
+Listado de Clientes
+{% endblock h1_header %}
+{% block contenido %}
+<a href={%url 'formulario_clientes' %}>Crear cliente nuevo</a>
+<form action= {% url "mostrar_listado" %} method="get">
+
+    {{formulario_clientes}}
+    
+    <input type = 'submit' value = 'Buscar'>
+</form>
     <h1>Listado de Clientes</h1>
-    <ul>
-        {% for cliente in clientes %}
-            <li>{{ cliente.nombre_corto_cliente }} - {{ cliente.numero_cliente }}</li>
-        {% endfor %}
-    </ul>
-</body>
-</html>
+    {% if clientes %}
+        <ul>
+            {% for cliente in clientes %}
+                <li>Nombre: {{ cliente.nombre_cliente }} {{cliente.apellido_cliente}} - Teléfono: {{ cliente.telefono_cliente}}
+                    <a href={% url "eliminar_clientes" cliente.id %} >Eliminar</a> | 
+                    <a href={% url "editar_clientes" cliente.id %} >Editar</a> | 
+                    <a href={% url "ver_clientes" cliente.id %} >Ver detalle</a>
+                </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+    <p> No existen clientes creados hasta el momento</p>
+    {% endif %}
+{% endblock %}
