--- a/templates/baseweb.html
+++ b/templates/baseweb.html
@@ -22,15 +22,14 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
             <div class="container px-5">
-                <a class="navbar-brand fw-bold" href="#page-top">Inicio</a>
+                <a class="navbar-brand fw-bold" href={%url 'inicio' %}>Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="bi-list"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="formularioClientes/">Agregar Clientes</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="listadoClientes">Mostrar Listado</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href={%url 'mostrar_listado' %}>Clientes</a></li>
                     </ul>
                     <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                         <span class="d-flex align-items-center">
@@ -87,6 +86,9 @@
                 </div>
             </div>
         </header>
+        <main>
+            {% block contenido %}{% endblock contenido %}
+        </main>
         <!-- Footer-->
         <footer class="bg-black text-center py-5">
             <div class="container px-5">
