--- a/templates/baseweb.html
+++ b/templates/baseweb.html
@@ -29,12 +29,22 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
+                        {% if request.user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link me-lg-3" href='#'}>{{request.user.username}}</a></li>
+                            <form action={%url 'logout' %} method = 'POST'> 
+                                {% csrf_token %}
+                                <input type='submit' class="btn btn-secondary" value='Cerrar Sesión'>
+                            </form>
+                        {% else %}
+                        <li class="nav-item"><a class="btn btn-primary" href={%url 'login' %}>Iniciar Sesión</a></li>
+                        <li class="nav-item"><a class="btn btn-secondary" href={%url 'registro' %}>Registrarse</a></li>
+                        {% endif %}
                         <li class="nav-item"><a class="nav-link me-lg-3" href={%url 'mostrar_listado' %}>Clientes</a></li>
                     </ul>
                     <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                         <span class="d-flex align-items-center">
                             <i class="bi-chat-text-fill me-2"></i>
-                            <span class="small">Send Feedback</span>
+                            <span class="small">Login</span>
                         </span>
                     </button>
                 </div>
@@ -107,7 +117,7 @@
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header bg-gradient-primary-to-secondary p-4">
-                        <h5 class="modal-title font-alt text-white" id="feedbackModalLabel">Send feedback</h5>
+                        <h5 class="modal-title font-alt text-white" id="feedbackModalLabel">Iniciar Sesión</h5>
                         <button class="btn-close btn-close-white" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body border-0 p-4">
@@ -122,27 +132,15 @@
                             <!-- Name input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                <label for="name">Full name</label>
-                                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                                <label for="name">Usuario</label>
+                                <div class="invalid-feedback" data-sb-feedback="name:required">Se requiere un usuario.</div>
                             </div>
                             <!-- Email address input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
-                                <label for="email">Email address</label>
-                                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-                            </div>
-                            <!-- Phone number input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-                                <label for="phone">Phone number</label>
-                                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
-                            </div>
-                            <!-- Message input-->
-                            <div class="form-floating mb-3">
-                                <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                                <label for="message">Message</label>
-                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                                <label for="email">Contraseña</label>
+                                <div class="invalid-feedback" data-sb-feedback="email:required">Se debe completar con la contraseña.</div>
+                                <div class="invalid-feedback" data-sb-feedback="email:email">Contraseña invalida.</div>
                             </div>
                             <!-- Submit success message-->
                             <!---->
@@ -162,7 +160,7 @@
                             <!-- an error submitting the form-->
                             <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                             <!-- Submit Button-->
-                            <div class="d-grid"><button class="btn btn-primary rounded-pill btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
+                            <div class="d-grid"><button class="btn btn-primary rounded-pill btn-lg disabled" id="submitButton" type="submit">Ingresar</button></div>
                         </form>
                     </div>
                 </div>
