--- a/templates/baseweb.html
+++ b/templates/baseweb.html
@@ -30,7 +30,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                         {% if request.user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link me-lg-3" href='#'}>{{request.user.username}}</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href={%url 'editar_perfil'%}>{{request.user.username}}</a></li>
                             <form action={%url 'logout' %} method = 'POST'> 
                                 {% csrf_token %}
                                 <input type='submit' class="btn btn-secondary" value='Cerrar Sesión'>
