--- a/templates/baseweb.html
+++ b/templates/baseweb.html
@@ -22,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
             <div class="container px-5">
-                <a class="navbar-brand fw-bold" href={%url 'inicio' %}>Inicio</a>
+                <a class="navbar-brand fw-bold" href={%url 'inicio' %}>INICIO</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="bi-list"></i>
@@ -30,29 +30,22 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                         {% if request.user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link me-lg-3" href={%url 'editar_perfil'%}>
+                        <li class="nav-item"><a class="nav-link me-lg-0" href={%url 'editar_perfil'%}>
                             {% if request.user.datosextra.avatar %}
-                            <img src={{request.user.datosextra.avatar.url}} alt='Avatar' height="30px" >
+                            <img src={{request.user.datosextra.avatar.url}} alt='Avatar' height="30px">
                             {% endif %}
-                            {{request.user.username}}
-                        </a>
                         </li>
-                            <form action={%url 'logout' %} method = 'POST'> 
-                                {% csrf_token %}
-                                <input type='submit' class="btn btn-secondary" value='Cerrar Sesión'>
-                            </form>
-                        {% else %}
-                        <li class="nav-item"><a class="btn btn-primary" href={%url 'login' %}>Iniciar Sesión</a></li>
-                        <li class="nav-item"><a class="btn btn-secondary" href={%url 'registro' %}>Registrarse</a></li>
-                        {% endif %}
-                        <li class="nav-item"><a class="nav-link me-lg-3" href={%url 'mostrar_listado' %}>Clientes</a></li>
+                        </a>
+                        <li class="navbar-nav ms-auto me-4 my-3 my-lg-0"><a class="btn btn rounded-pill px-2 mb-1 mb-lg-0" href={%url 'editar_perfil' %}>{{request.user.username}}</a></li>
+                        <form action={%url 'logout' %} method = 'POST'> 
+                            {% csrf_token %}
+                            <input type='submit' class="btn btn-secondary rounded-pill px-3 mb-2 mb-lg-0" value='Cerrar Sesión'>
+                        </form>
+                            {% else %}
+                        <li class="navbar-nav ms-auto me-4 my-3 my-lg-0"><a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href={%url 'login' %}>Iniciar Sesión</a></li>
+                        <li class="navbar-nav ms-auto me-4 my-3 my-lg-0"><a class="btn btn-secondary rounded-pill px-3 mb-2 mb-lg-0" href={%url 'registro' %}>Registrarse</a></li>
+                    {% endif %}
                     </ul>
-                    <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
-                        <span class="d-flex align-items-center">
-                            <i class="bi-chat-text-fill me-2"></i>
-                            <span class="small">Login</span>
-                        </span>
-                    </button>
                 </div>
             </div>
         </nav>
@@ -66,8 +59,10 @@
                             <h1 class="display-1 lh-1 mb-3">{% block h1_header %}{% endblock h1_header %}</h1>
                             <p class="lead fw-normal text-muted mb-5"></p>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
-                                <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src={% static "assets/img/google-play-badge.svg" %} alt="..." /></a>
-                                <a href="#!"><img class="app-badge" src={% static "assets/img/app-store-badge.svg" %} alt="..." /></a>
+                                {% if request.user.is_authenticated %}
+                                <p class="app-badge mb-0 mb-lg-4 my-3 my-lg-0">{% block producto_1 %}<a class="btn btn-warning rounded-pill px-3 mb-2 mb-lg-0" href={%url 'mostrar_listado' %}>CLIENTES</a>{% endblock producto_1 %}</p>
+                                <p class="app-badge mb-0 mb-lg-4 my-3 my-lg-0">{% block producto_2 %}<a class="btn btn-warning rounded-pill px-3 mb-2 mb-lg-0" href={%url 'productos' %}>PRODUCTOS</a>{% endblock producto_2 %}</p>
+                                {% endif%}
                             </div>
                         </div>
                     </div>
