--- a/Base/templates/inicio/editar_clientes.html
+++ b/Base/templates/inicio/editar_clientes.html
@@ -2,6 +2,9 @@
 {% block h1_header %}
 Editando al cliente: {{nombre.nombre_cliente}}
 {% endblock h1_header %}
+{% block producto_2%}
+{% comment %} <a class="btn btn-warning rounded-pill px-3 mb-2 mb-lg-0" href={%url 'aerosoles' %}>AEROSOLES</a> {% endcomment %}
+{% endblock producto_2%}
 {% block contenido %}
 <form action= {% url 'editar_clientes' nombre.id %} method="POST">
     {% csrf_token %}
