Finalicé la ultima entrega

--- a/Base/templates/inicio/acercademi.html
+++ b/Base/templates/inicio/acercademi.html
@@ -1,7 +1,13 @@
 {% extends "baseweb.html" %}
 {% block h1_header %} 
 ACERCA DE MI
-{%endblock h1_header %} 
+{%endblock h1_header %}
+{% block producto_1%}
+{% comment %} <a class="btn btn-warning rounded-pill px-3 mb-2 mb-lg-0" href={%url 'aerosoles' %}>AEROSOLES</a> {% endcomment %}
+{% endblock producto_1%}
+{% block producto_2%}
+{% comment %} <a class="btn btn-warning rounded-pill px-3 mb-2 mb-lg-0" href={%url 'aerosoles' %}>AEROSOLES</a> {% endcomment %}
+{% endblock producto_2%} 
 {%block acerca%}
 <section class="bg-light">
     <div class="container px-5">
