--- a/templates/baseweb.html
+++ b/templates/baseweb.html
@@ -106,7 +106,7 @@
         <footer class="bg-black text-center py-5">
             <div class="container px-5">
                 <div class="text-white-50 small">
-                    <a href="acercademi">ACERCA DE MI</a>
+                    <a href={%url 'acercademi' %}>ACERCA DE MI</a>
                     <div class="mb-2">&copy; Your Website 2023. All Rights Reserved.</div>
                 </div>
             </div>
